fix social icons on smaller screens (Footer)

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -142,7 +142,18 @@
   text-align: center;
 }
 
-@media (max-width: 820px) {
+
+@media (max-width: 1000px){
+  .social-icons { 
+    align-items: center;
+    // flex-direction: column;
+    // .social-icon-link { 
+    //   margin: 12px 0 0 12px ;
+    // }
+  }
+}
+
+@media (max-width: 1000px) {
   .footer-links {
     padding-top: 2rem;
   }
@@ -165,6 +176,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
   }
 }
 
